# trading-dashboard

./: main.py  pyproject.toml  requirements.txt  web.py
templates/: dashboard.html
